Fixed horizontal sliding bug for about me screen on mobile devices

--- a/client/src/components/css/about.css
+++ b/client/src/components/css/about.css
@@ -55,5 +55,6 @@
 @media screen and (max-width: 750px){
     .dev-item-div{
         width: 100%;
+        margin-left: 0;
     }
 }
